--- a/app/assets/stylesheets/quests/quest.scss
+++ b/app/assets/stylesheets/quests/quest.scss
@@ -62,7 +62,7 @@
 
 .quest {
 	background: asset-data-url("paper.jpg") no-repeat center;
-	min-height: 270px;
+	// min-height: 270px;
 	max-width: 540px;
 	grid-column: 2, 3;
 	display: grid;
